package models;

/**
 * Enumeration representing the clues for the MasterMind game.
 */
public enum Clue {
    WELL_PLACED, // 3
    MISPLACED, // 1
    WRONG // 0
}