package models;

/**
 * Enumeration representing the colors of the pawns for the MasterMind game.
 */
public enum PawnColor {
    RED,
    GREEN,
    BLUE,
    YELLOW,
    CYAN,
    PINK,
    LIGHT_GRAY,
    MAGENTA
}